VTK - fix IE 7 spacing to content

--- a/src/main/resources/web/themes/default/default-ie7.css
+++ b/src/main/resources/web/themes/default/default-ie7.css
@@ -19,7 +19,7 @@ div.tabs {
   z-index: 1;
 }
 
-ul.list-menu.resourceMenuLeft {
+ul.list-menu.resourceMenuRight {
   margin-bottom: 0px;
   padding-bottom: 20px;
 }
